--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -54,15 +54,15 @@ const asidePaddingTop = coverImageURL ? '200px' : '60px'
     <meta charset="UTF-8" />
     <meta name="generator" content={Astro.generator} />
     <title>{siteTitle}</title>
-    <meta name="description" content={siteDescription} />
+    <meta name="description" content=web制作についてのコードやweb制作に関連する記事を書きます。web制作に関連するコードを知りたい人に伝わるように記事を書いています。 />
     <link rel="canonical" href={siteURL} />
     <meta property="og:url" content={siteURL} />
     <meta property="og:title" content={siteTitle} />
-    <meta property="og:description" content={siteDescription} />
+    <meta property="og:description" content=web制作についてのコードやweb制作に関連する記事を書きます。web制作に関連するコードを知りたい人に伝わるように記事を書いています。 />
     <meta property="og:site_name" content={database.Title} />
     <meta property="og:image" content={ogImage || siteOGImage} />
     <meta name="twitter:title" content={siteTitle} />
-    <meta name="twitter:description" content={siteDescription} />
+    <meta name="twitter:description" content=web制作についてのコードやweb制作に関連する記事を書きます。web制作に関連するコードを知りたい人に伝わるように記事を書いています。 />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content={ogImage || siteOGImage} />
     <link
