--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -187,6 +187,9 @@ const asidePaddingTop = coverImageURL ? '200px' : '60px'
     order: 1;
     width: 20%;
     padding: var(--asidePaddingTop) 40px 40px;
+    margin-top: 24px;
+    margin-bottom: 24px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   }
   @media (max-width: 640px) {
     aside {
