--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -217,7 +217,7 @@ const asidePaddingTop = coverImageURL ? '200px' : '60px'
   }
   @media (max-width: 640px) {
     div.content {
-      padding: 0 18px;
+      padding: 0 18px 16px;
     }
   }
 
