--- a/src/pages/posts/tag/[tag]/page/[page].astro
+++ b/src/pages/posts/tag/[tag]/page/[page].astro
@@ -69,8 +69,10 @@ const currentTag = posts[0].Tags.find((t) => t.name === tag)
         posts.map((post) => (
           <div class={styles.post} key={post.Slug}>
             <PostTitle post={post} />
-            <PostDate post={post} />
-            <PostTags post={post} />
+            <div slot="post__flex" class={styles.post__flex}>
+              <PostDate post={post} />
+              <PostTags post={post} />
+            </div>
             <PostFeaturedImage post={post} />
             <PostExcerpt post={post} />
             <ReadMoreLink post={post} />
