--- a/src/styles/blog.module.css
+++ b/src/styles/blog.module.css
@@ -12,10 +12,6 @@
   }
 }
 
-.post {
-  margin: 0 auto 48px;
-}
-
 .post :global(h3) {
   margin: 0;
   color: var(--fg);
@@ -24,4 +20,23 @@
   margin-top: 0.5rem;
   padding: 0;
   border: 0;
+}
+
+.post__flex {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 8px;
+}
+
+.post__wrapper {
+  max-width: 570px;
+  margin: 0 auto 56px;
+  padding: 20px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.post__wrapper img {
+  width: 100%;
+  object-fit: cover;
 }
